--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 torch~=1.13.1
+onnx~=1.15.0
+numpy~=1.26.2
 git+https://github.com/Xilinx/brevitas.git@6695e8df7f6a2c7715b9ed69c4b78157376bb60b
 git+https://github.com/iksnagreb/qonnx.git@finn/pull/901
 git+https://github.com/iksnagreb/finn.git@feature/attention-streamline
