Enable bias on all linear layers

--- a/params.yaml
+++ b/params.yaml
@@ -4,6 +4,8 @@ model:
   num_heads: 8
   # Number of attention block "layers"
   num_layers: 1
+  # Enables/disables bias on linear layers
+  bias: True
   # Size of the input/output embedding dimension
   emb_dim: 48
   # Size of the MLP layer dimension
