--- a/metrics.yaml
+++ b/metrics.yaml
@@ -1,6 +1,6 @@
-BRAM_18K: 413
-DSP: 136
-DSP48E: 0
-FF: 56676
-LUT: 82629
-URAM: 0
+BRAM_18K: 32
+BRAM_36K: 78
+DSP48: 136
+FF: 91679
+LUT: 76524
+SRL: 1393
