--- a/params.yaml
+++ b/params.yaml
@@ -26,5 +26,12 @@ build:
   board: "RFSoC2x2"
 #  # Optional: Start the build from a specific step
 #  start_step: "step_tidy_up_pre_attention"
-  # Optional: Stop the build after a specific step
-  stop_step: "step_hls_ipgen"
+#  # Optional: Stop the build after a specific step
+#  stop_step: "step_hls_ipgen"
+# Metrics aggregation configuration
+metrics:
+  # Path to the report file to be summarized
+  # Note: remember to adjust the build directory when changing the config above
+  report: "build/report/post_synth_resources.json"
+  # Filter the report rows
+  filter: "(top)"
