Add pyarrow dependency required by pandas

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ onnx~=1.15.0
 numpy~=1.26.2
 PyYAML~=6.0.1
 pandas~=2.2.0
+pyarrow~=15.0.0
 git+https://github.com/Xilinx/brevitas.git@6695e8df7f6a2c7715b9ed69c4b78157376bb60b
 git+https://github.com/iksnagreb/qonnx.git@finn/pull/901
 git+https://github.com/iksnagreb/finn.git@merge/attention
