--- a/params.yaml
+++ b/params.yaml
@@ -24,6 +24,8 @@ build:
   synth_clk_period_ns: 10.0
   # Board to target with the build
   board: "RFSoC2x2"
+  # Path to folding configuration JSON file
+  folding_config_file: "folding.json"
 #  # Optional: Start the build from a specific step
 #  start_step: "step_tidy_up_pre_attention"
 #  # Optional: Stop the build after a specific step
