Benchmark HLS estimates of single GPT-2 block with reduced context size

--- a/metrics.yaml
+++ b/metrics.yaml
@@ -1,6 +1,6 @@
-BRAM_18K: 0
-BRAM_36K: 8
-DSP48: 76
-FF: 42949
-LUT: 43066
-SRL: 2135
+BRAM_18K: 2144
+DSP: 1392
+DSP48E: 0
+FF: 233835
+LUT: 802624
+URAM: 0
