Size down the dummy model so it actually fits on the device

--- a/metrics.yaml
+++ b/metrics.yaml
@@ -1,6 +1,7 @@
-BRAM_18K: 2144
-DSP: 1392
-DSP48E: 0
-FF: 233835
-LUT: 802624
-URAM: 0
+BRAM_18K: 14
+BRAM_36K: 56
+DSP: 192
+FF: 107276
+LUT: 170587
+SRL: 33759
+URAM: 12
