Fix sbatch job execution to actually work on Noctua 2

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -8,7 +8,7 @@ stages:
     deps:
       # Run scripts orchestrating the script execution (potentially via sbatch)
       - run.sh
-      - batch.sh
+      - noctua.sh
       # The script executing the stage
       - attention.py
     # Parameters used by this stage
@@ -27,12 +27,12 @@ stages:
   build:
     # Command running a finn build of the model produced during setup
     #   Note: More options should be provided via environment variables
-    cmd: bash run.sh $FINN/run-docker.sh build_custom $(pwd)
+    cmd: bash run.sh '$FINN/run-docker.sh build_custom $(pwd)'
     # Dependencies of this stage to determine when it needs to be rerun
     deps:
       # Run scripts orchestrating the script execution (potentially via sbatch)
       - run.sh
-      - batch.sh
+      - noctua.sh
       # The script executing the stage
       - build.py
       # The custom build steps implemented in this package
@@ -65,7 +65,7 @@ stages:
     deps:
       # Run scripts orchestrating the script execution (potentially via sbatch)
       - run.sh
-      - batch.sh
+      - noctua.sh
       # The script executing the stage
       - metrics.py
       # The output products of the previous stage
