--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ pandas~=2.2.0
 pyarrow~=15.0.0
 git+https://github.com/iksnagreb/brevitas.git@34c350afde0a69b7a39b13eb4748b979bdae1eff
 git+https://github.com/iksnagreb/qonnx.git@finn/pull/901
-git+https://github.com/iksnagreb/finn.git@merge/attention
+git+https://github.com/iksnagreb/finn.git@v0.10/merge/attention
 git+https://github.com/maltanar/pyverilator.git@766e457465f5c0dd315490d7b9cc5d74f9a76f4f
