--- a/dvc.yaml
+++ b/dvc.yaml
@@ -3,15 +3,19 @@ stages:
   # Stage preparing the model form the configuration
   setup:
     # Stage run the setup script as the command
-    cmd: python -m attention
+    cmd: python -m export
     # Dependencies of this stage to determine when it needs to be rerun
     deps:
       # The script executing the stage
-      - attention.py
+      - export.py
+      # The model description and setup code
+      - model.py
     # Parameters used by this stage
     params:
-      # Track the model section from the parameters file
+      # Track the model and export hyperparameter sections from the parameters
       - model
+      - export
+      - seed
     # Outputs produced by this stage which should be tracked and passed on to
     # the next stage
     outs:
