Add build-step setting the folding to the T^2 cycles per sequence target
This is a more robust solution compared to the previous, manual folding
configuration, as this relies on the existing SetFolding transformation
from FINN, which already handles MVAU and Thresholding layers.

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -67,7 +67,9 @@ stages:
       - out.npy
     # Parameters used by this stage
     params:
-      # Track the build section from the parameters file
+      # Track the model, RNG-seed and build section from the parameters file
+      - model
+      - seed
       - build
       # Folding configurations specifying parallelization and FIFO sizes for the
       # layers/operators
