--- a/dvc.yaml
+++ b/dvc.yaml
@@ -68,7 +68,8 @@ stages:
     # Parameters used by this stage
     params:
       # Track the model, RNG-seed and build section from the parameters file
-      - model
+      - model.seq_len
+      - model.emb_dim
       - seed
       - build
       # Folding configurations specifying parallelization and FIFO sizes for the
