Introduce ComposedTransformation for applying transformation sequences
This allows to compose graph transformations such that each individual
transformation as well as the whole sequence is applied exhaustively.

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -16,6 +16,7 @@ stages:
       - model
       - export
       - seed
+      - calibration_passes
     # Outputs produced by this stage which should be tracked and passed on to
     # the next stage
     outs:
