--- a/params.yaml
+++ b/params.yaml
@@ -1,5 +1,7 @@
 # Global seed to make evaluation reproducible
 seed: 12
+# Number of calibration passes to be applied to the model before export
+calibration_passes: 4
 # Model configuration section
 model:
   # Number of attention heads
