dvc: commit experiment 8d3cfc05ce3f04a0fac09adbdc72963f2c4f911e1bf5ad45a0743e91735a3964

--- a/folding.yaml
+++ b/folding.yaml
@@ -24,7 +24,7 @@ defaults:
     resType: dsp
     # Memory mode for weight storage
     #   Options: internal_embedded, internal_decoupled, external
-    mem_mode: internal_decoupled
+    mem_mode: internal_embedded
     # Type of memory to be used for weight storage if "internal_decoupled"
     #   Options: auto, block, distributed, ultra
     ram_style: distributed
