--- a/folding.yaml
+++ b/folding.yaml
@@ -21,10 +21,10 @@ defaults:
   MVAU_hls:
     # Resource type to be used for implementing multiplications/MACs
     #   Options: auto, lut or dsp
-    resType: dsp
+    resType: lut
     # Memory mode for weight storage
     #   Options: internal_embedded, internal_decoupled, external
-    mem_mode: internal_decoupled
+    mem_mode: internal_embedded
     # Type of memory to be used for weight storage if "internal_decoupled"
     #   Options: auto, block, distributed, ultra
     ram_style: distributed
