--- a/folding.yaml
+++ b/folding.yaml
@@ -54,7 +54,7 @@ defaults:
     mem_mode: internal_decoupled
     # Type of memory to be used for threshold storage if "internal_decoupled"
     #   Options: distributed, block
-    ram_style: distributed
+    ram_style: block
     # Makes thresholds writeable through AXI-lite interface at runtime
     runtime_writeable_weights: 0
   # Multi-thresholds implemented via RTL (applies to standalone thresholds)
