--- a/folding.yaml
+++ b/folding.yaml
@@ -51,7 +51,7 @@ defaults:
   Thresholding_hls:
     # Memory mode for threshold storage
     #   Options: internal_embedded, internal_decoupled
-    mem_mode: internal_decoupled
+    mem_mode: internal_embedded
     # Type of memory to be used for threshold storage if "internal_decoupled"
     #   Options: distributed, block
     ram_style: distributed
