dvc: commit experiment 67eb5bb29d5353ebe1479bd6689379dcd41fa3c65d049dac6407c0c6f07fa6fb

--- a/folding.yaml
+++ b/folding.yaml
@@ -4,13 +4,13 @@ defaults:
   ScaledDotProductAttention_hls:
     # Type of memory to be used for internal buffer storage
     #   Options: auto, block, distributed, ultra
-    ram_style: distributed
+    ram_style: block
     # Type of memory to be used for threshold storage
     #   Options: auto, block, distributed
-    ram_style_thresholds: distributed
+    ram_style_thresholds: block
     # Resource type to be used for implementing multiplications/MACs
     #   Options: auto, lut or dsp
-    mac_resource: dsp
+    mac_resource: lut
   # Addition of two inputs (constants or streamed) implemented via HLS
   ElementwiseAdd_hls:
     # Type of memory to be used for internal buffer storage and/or constant
