--- a/folding.yaml
+++ b/folding.yaml
@@ -21,7 +21,7 @@ defaults:
   MVAU_hls:
     # Resource type to be used for implementing multiplications/MACs
     #   Options: auto, lut or dsp
-    resType: dsp
+    resType: lut
     # Memory mode for weight storage
     #   Options: internal_embedded, internal_decoupled, external
     mem_mode: internal_decoupled
