--- a/folding.yaml
+++ b/folding.yaml
@@ -44,7 +44,7 @@ defaults:
     mem_mode: internal_decoupled
     # Type of memory to be used for weight storage if "internal_decoupled"
     #   Options: auto, block, distributed, ultra
-    ram_style: distributed
+    ram_style: block
     # Makes weights writeable through AXI-lite interface at runtime
     runtime_writeable_weights: 0
   # Multi-thresholds implemented via HLS (applies to standalone thresholds)
