--- a/folding.yaml
+++ b/folding.yaml
@@ -27,7 +27,7 @@ defaults:
     mem_mode: internal_decoupled
     # Type of memory to be used for weight storage if "internal_decoupled"
     #   Options: auto, block, distributed, ultra
-    ram_style: distributed
+    ram_style: block
     # Type of memory to be used for threshold storage
     #   Options: auto, block, distributed
     ram_style_thresholds: distributed
