--- a/params.yaml
+++ b/params.yaml
@@ -9,7 +9,7 @@ model:
   # Number of attention block "layers"
   num_layers: 1
   # Enables/disables bias on linear layers
-  bias: True
+  bias: true
   # Size of the input/output embedding dimension
   emb_dim: 8
   # Size of the MLP layer dimension
@@ -17,7 +17,7 @@ model:
   # Length of the input sequence, i.e., context size
   seq_len: 32
   # Number of bits to use for quantized representation
-  bits: 4
+  bits: 8
   # Type of normalization layer to use in the transformer blocks
   #   Options are: layer-norm, batch-norm and none
   norm: none
@@ -38,7 +38,7 @@ build:
   # Directory to store the build outputs
   output_dir: build
   # Run synthesis to generate a .dcp for the stitched-IP output product
-  stitched_ip_gen_dcp: False
+  stitched_ip_gen_dcp: false
   # Target clock period, i.e., inverse of target frequency
   synth_clk_period_ns: 10.0
   # Board to target with the build
@@ -51,7 +51,7 @@ build:
   specialize_layers_config_file: specialize_layers.json
   # Force the implementation of standalone thresholds to be able to use RTL
   # implementation of the MVU
-  standalone_thresholds: True
+  standalone_thresholds: true
   # Maximum bit-width of quantizers converted to multi-thresholds
   max_multithreshold_bit_width: 16
   # Maximum width of MVAU stream per PE
@@ -64,6 +64,6 @@ build:
 metrics:
   # Path to the report file to be summarized
   # Note: remember to adjust the build directory when changing the config above
-  report: "build/report/post_synth_resources.json"
+  report: build/report/post_synth_resources.json
   # Filter the report rows
-  filter: "(top)"
+  filter: MergeMultiHeads_hls
