dvc: commit experiment dae6c49172eddfe9fb79675f65dbb2d910e235f08307d02d51e15a5c2f968ee5

--- a/folding.yaml
+++ b/folding.yaml
@@ -4,10 +4,10 @@ defaults:
   ScaledDotProductAttention_hls:
     # Type of memory to be used for internal buffer storage
     #   Options: auto, block, distributed, ultra
-    ram_style: distributed
+    ram_style: block
     # Type of memory to be used for threshold storage
     #   Options: auto, block, distributed
-    ram_style_thresholds: distributed
+    ram_style_thresholds: block
     # Resource type to be used for implementing multiplications/MACs
     #   Options: auto, lut or dsp
     mac_resource: lut
@@ -27,7 +27,7 @@ defaults:
     mem_mode: internal_decoupled
     # Type of memory to be used for weight storage if "internal_decoupled"
     #   Options: auto, block, distributed, ultra
-    ram_style: distributed
+    ram_style: block
     # Type of memory to be used for threshold storage
     #   Options: auto, block, distributed
     ram_style_thresholds: distributed
@@ -44,7 +44,7 @@ defaults:
     mem_mode: internal_decoupled
     # Type of memory to be used for weight storage if "internal_decoupled"
     #   Options: auto, block, distributed, ultra
-    ram_style: distributed
+    ram_style: block
     # Makes weights writeable through AXI-lite interface at runtime
     runtime_writeable_weights: 0
   # Multi-thresholds implemented via HLS (applies to standalone thresholds)
