--- a/params.yaml
+++ b/params.yaml
@@ -1,19 +1,19 @@
 # Global seed to make evaluation reproducible
 seed: 12
 # Number of calibration passes to be applied to the model before export
-calibration_passes: 4
+calibration_passes: 12
 # Model configuration section
 model:
   # Number of attention heads
-  num_heads: 1
+  num_heads: 2
   # Number of attention block "layers"
   num_layers: 1
   # Enables/disables bias on linear layers
-  bias: True
+  bias: true
   # Size of the input/output embedding dimension
-  emb_dim: 8
+  emb_dim: 48
   # Size of the MLP layer dimension
-  mlp_dim: 32
+  mlp_dim: 192
   # Length of the input sequence, i.e., context size
   seq_len: 32
   # Number of bits to use for quantized representation
@@ -38,7 +38,7 @@ build:
   # Directory to store the build outputs
   output_dir: build
   # Run synthesis to generate a .dcp for the stitched-IP output product
-  stitched_ip_gen_dcp: False
+  stitched_ip_gen_dcp: false
   # Target clock period, i.e., inverse of target frequency
   synth_clk_period_ns: 10.0
   # Board to target with the build
@@ -51,11 +51,11 @@ build:
   specialize_layers_config_file: specialize_layers.json
   # Force the implementation of standalone thresholds to be able to use RTL
   # implementation of the MVU
-  standalone_thresholds: True
+  standalone_thresholds: true
   # Maximum bit-width of quantizers converted to multi-thresholds
   max_multithreshold_bit_width: 16
   # Maximum width of MVAU stream per PE
-  mvau_wwidth_max: 512
+  mvau_wwidth_max: 2048
 #  # Optional: Start the build from a specific step
 #  start_step: "step_tidy_up_pre_attention"
 #  # Optional: Stop the build after a specific step
@@ -64,6 +64,6 @@ build:
 metrics:
   # Path to the report file to be summarized
   # Note: remember to adjust the build directory when changing the config above
-  report: "build/report/post_synth_resources.json"
+  report: build/report/post_synth_resources.json
   # Filter the report rows
-  filter: "(top)"
+  filter: (top)
